[dyad] Khắc phục Cron Job bằng cách đổi tên và redeploy - wrote 1 file(s)

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,7 +1,7 @@
 # This file configures the Cron Job for the application.
 # The job below is set to run every minute.
 
-[cron.jobs.update_tasks]
+[cron.jobs.update_all_task_statuses]
 schedule = "* * * * *"
 function = "update-task-statuses"
 header.Authorization = "Bearer ${CRON_SECRET}"
